--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br>
 
 <form id="message-form">
-  Enter a messge for all peers: <input type="text" id="message-entry"><br>
+  Enter a message for all peers: <input type="text" id="message-entry"><br>
   <input id="send-btn" type="submit" value="Send!">
 </form>
 
@@ -54,7 +54,7 @@
 
 </div>
 
-<script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
+<script src="http://cdn.peerjs.com/0.3/peer.js"></script>
 
 <script type="text/javascript">
    // Constants
@@ -80,7 +80,8 @@
    function leader_told_me_to_connect(new_peer_id) {
       // Verify I'm not already connected
       for (var ndx = 0; ndx < connected_friends.length; ndx++) {
-         if (connected_friends[ndx].peer == new_peer_id) {
+         if (connected_friends[ndx].peer == new_peer_id ||
+             my_id == new_peer_id) {
             return;
          }
       }
@@ -115,7 +116,12 @@
       }
    }
 
-   
+   function silly(connection, new_id) {
+      connection.send({
+            type: ADD_CONNECTION,
+            new_id: new_id
+         });
+   }   
 
    // Called when I connect to someone, or when someone connects to me!
    function new_connection_established(connection) {
@@ -128,10 +134,7 @@
       // Tell the new user about all my friends
       for (var ndx = 0; ndx < connected_friends.length; ndx++) {
          console.log("Telling the peer " + connection.peer + " all about my old friend " + connected_friends[ndx].peer);
-         connection.send({
-            type: ADD_CONNECTION,
-            new_id: connected_friends[ndx].peer
-         });
+         setTimeout(silly, 100, connection, connected_friends[ndx].peer);
       }
 
       // This sets up a function to be called whenever we receive data
@@ -161,8 +164,7 @@
 
       conn_id = $("#id-entry").val();
       
-      if (conn_id.length > 0)
-      {
+      if (conn_id.length > 0) {
          // Tries to connect to a new friend with the peer ID "other_id"
          var new_connection = peer.connect(conn_id);
 
@@ -199,12 +201,14 @@
 
 
          connected_friends[ndx].send({
+            type: MESSAGE,
             username: name, 
             message: msg});
          }
 
          // Also print my own messages
          receive_message({
+            type: MESSAGE,
             username: "me", 
             message: msg});
 
