--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 
+<script src="http://www.parsecdn.com/js/parse-1.6.14.js"></script>
+
 <meta name='keywords' content='WebRTC, HTML5, JavaScript' />
 <meta name='description' content='WebRTC Reference App' />
 <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1'>
@@ -57,6 +59,18 @@
 <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
 
 <script type="text/javascript">
+
+   // Parse.initialize("k7F9lyAI3VI9jJedvxSAcMO0gF4aUUX3QhAOFuQu", "dGTxclC0TwGC0pP6Y0ZEKDloAI9VzHlPmzSKQ3L7");
+    Parse.initialize("1QOrGcGEXlkaE0HiMiCf9aR8vUC0vDQ5diErXt1Q", "MuQXq7b3cMDNKoh1neHL9lqLi4raKmM657Y63k4V");
+
+   // Parse.serverURL = 'http://api.parse.com/parse'
+
+   var TestObject = Parse.Object.extend("LeaderID");
+   var testObject = new TestObject();
+   testObject.save({id: "test"}).then(function(object) {
+     alert("yay! it worked");
+   });
+
    // Constants
    var MESSAGE = 0;
    var ADD_CONNECTION = 1;
@@ -116,13 +130,6 @@
       }
    }
 
-   function silly(connection, new_id) {
-      connection.send({
-            type: ADD_CONNECTION,
-            new_id: new_id
-         });
-   }   
-
    // Called when I connect to someone, or when someone connects to me!
    function new_connection_established(connection) {
       $("#log").append(
@@ -134,7 +141,10 @@
       // Tell the new user about all my friends
       for (var ndx = 0; ndx < connected_friends.length; ndx++) {
          console.log("Telling the peer " + connection.peer + " all about my old friend " + connected_friends[ndx].peer);
-         setTimeout(silly, 100, connection, connected_friends[ndx].peer);
+         connection.send({
+            type: ADD_CONNECTION,
+            new_id: new_id
+         });
       }
 
       // This sets up a function to be called whenever we receive data
@@ -237,7 +247,9 @@
 
    // Listen for new peers connecting TO me
    peer.on('connection', function(incoming_connection) { 
-      new_connection_established(incoming_connection);
+      incoming_connection.on('open', function() {
+         new_connection_established(incoming_connection);
+      });
    });
 
    // Alert friends when we're disconnecting
