working graph stuff

--- a/test-graph.html
+++ b/test-graph.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    10: <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.js"></script>
     <script type="text/javascript" src="underscore.js"></script>
-    <script src="http:////d3js.org/d3.v3.js"></script>
+    <script src="http://d3js.org/d3.v3.js"></script>
     <style type="text/css">
         .link { stroke: #ccc; }
         .nodetext { pointer-events: none; font: 10px sans-serif; }
